change default text colour to white to fix some illegible pages

--- a/static/css/pyconza2021.css
+++ b/static/css/pyconza2021.css
@@ -15,7 +15,7 @@ body {
 }
 
 #main {
-  color: #b83c3a;
+  color: white;
   padding-top: 1em;
 }
 
